--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -1,3 +1,8 @@
+%border-for-blocks {
+	border: 2px solid rgb(214, 217, 218);
+	border-radius: 4px;
+}
+
 
 *, *:before, *:after{
 	box-sizing: border-box;
@@ -17,6 +22,45 @@
 
 .title {
 	font-size: 35px;
+	margin-bottom: 30px;
 }
 
+
+
+
+.new-rent {
+	& h2 {
+		height: 20px;
+		display: block;
+		margin-bottom: 30px;
+		font-size: 28px;
+		
+		&:before {
+			content: '🤑';
+			font-size: 26px;
+			margin-right: 10px;
+		}
+	}
+
+	&-wrapper {
+		@extend %border-for-blocks;
+		display: flex;
+		justify-content: space-between;
+		background-color: rgb(232, 234, 238);
+		padding: 20px 38px 30px;
+
+		& label {
+			& span {
+				font-size: 16px;
+				display: block;
+				margin-bottom: 13px;
+			}
+
+			& input {
+				@extend %border-for-blocks;
+				height: 40px;
+			}
+		}
+	}
+}
 
