--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -2,6 +2,16 @@
 	border: 2px solid rgb(214, 217, 218);
 	border-radius: 4px;
 }
+%button-size-color {
+	border-radius: 4px;
+	width: 120px;
+	height: 40px;
+	color: rgb(255, 255, 255);
+}
+%for-bike-box-data {
+	font-size: 20px;
+	overflow: hidden;
+}
 
 
 *, *:before, *:after{
@@ -15,7 +25,7 @@
 
 .wrapper {
 	position: relative;
-	padding-top: 40px;
+	padding: 40px 0;
 	min-width: 100%;
 	min-height: 100vh;
 	background-color: rgb(245, 245, 245);
@@ -31,6 +41,8 @@
 
 
 .new-rent {
+	margin-bottom: 50px;
+
 	& h2 {
 		height: 20px;
 		display: block;
@@ -80,14 +92,77 @@
 		}
 
 		& button {
+			@extend %button-size-color;
 			border: 2px solid rgb(22, 158, 129);
-			border-radius: 4px;
 			margin-top: 35px;
-			width: 140px;
-			height: 40px;
-			color: white;
 			background-color: rgb(34, 186, 153);
 		}
+	}
+}
+
+.free-bikes {
+	& h2 {
+		height: 20px;
+		display: block;
+		margin-bottom: 30px;
+		font-size: 28px;
+		
+		&:before {
+			content: '🚲';
+			position: relative;
+			bottom: 4px;
+			font-size: 26px;
+			margin-right: 8px;
+			padding-bottom: 5px;
+		}
+	}
+}
+
+
+.bike-box {
+	@extend %border-for-blocks;
+	display: flex;
+	justify-content: space-between;
+	background-color: rgb(255, 255, 255);
+	margin-bottom: 20px;
+	padding: 20px 38px;
+
+	&-data {
+		display: flex;
+	}
+
+	&-dash {
+		@extend %for-bike-box-data;
+		margin: 0 16px;
+	}
+
+	&-name {
+		@extend %for-bike-box-data;
+		width: 250px;
+	}
+
+	&-type {
+		@extend %for-bike-box-data;
+		width: 140px;
+		text-align: center;
+	}
+
+	&-price {
+		@extend %for-bike-box-data;
+		width: 84px;
+	}
+
+	& .blue-btn {
+		@extend %button-size-color;
+		border: 2px solid rgb(48, 68, 167);
+		background-color: rgb(56, 79, 200);
+		margin-right: 20px;
+	}
+
+	& .red-btn {
+		@extend %button-size-color;
+		border: 2px solid rgb(202, 41, 52);
+		background-color: rgb(241, 50, 63);
 	}
 }
 
@@ -101,7 +176,7 @@
 	justify-content: center;
 	min-width: 100vW;
 	min-height: 100vh;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(255, 255, 255, 0.8);
 	padding-top: 80px;
 
 	&-block {
@@ -119,6 +194,7 @@
 			font-size: 40px;
 			font-weight: bold;
 			color: rgb(0, 0, 0);
+			margin-bottom: 20px;
 		}
 	}
 }
